# claude-code-flow

./: .gitignore  .tmux.ralph.conf  CLAUDE.md  CONTRIBUTING.md  DEBUG_STREAMING.md  README.md  pyproject.toml  ralph_monitor.sh  reset-ralph-state.sh
.claude/: settings.json  settings.local.json.example
.claude/agents/: flow-analyzer.md  flow-locator.md
.claude/commands/: autonomous_commit.md  commit.md  create_handoff.md  create_plan.md  describe_pr.md  handle_pr_feedback.md  implement_plan.md  iterate_plan.md  ralph.md  research_codebase.md  research_requirements.md  resume_handoff.md  validate_plan.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: claude.yml
.tmux/scripts/: ralph_runtime.sh
docs/: TEMPLATE_INSTRUCTIONS.md  TEMPLATE_SETUP.md  claude-output-formats.md
flow/plans/: 2026-03-29-gh-14-description.md  2026-03-29-gh-15-description.md  2026-03-29-gh-18-description.md
flow/research/: 2026-03-29-gh-14-description.md  2026-03-29-gh-15-description.md  2026-03-29-gh-18-description.md
scripts/: debug_streaming.sh  diagnose_hang.sh  fix_print_mode.sh  parse_claude_stream.sh  parse_claude_stream_debug.sh  quick_stream_test.sh  ralph-autonomous.sh  ralph_circuit_breaker.sh  ralph_feedback.sh  ralph_github.sh  ralph_monitor.sh  ralph_priority.sh  ralph_state.sh  ralph_utils.sh  reset-ralph-state.sh  test_basic_streaming.sh  test_claude_basic.sh  test_output_formats.sh  test_simple_prompt.sh
src/algorithms/: merge_sort.py
tests/: test_fibonacci.py  test_logparser.py  test_merge_sort.py  test_word_frequency.py
(+3 files in other folders)
